--- a/Portfolio/Styles.css
+++ b/Portfolio/Styles.css
@@ -1,3 +1,36 @@
-body{
-    background: blue;
+*{
+    padding: 0;
+    margin: 0;
+}
+
+.navbar{
+    height: 10vh;
+    width: 100%;
+    background-color: black;
+}
+
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 20px;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+nav ul li{
+    list-style-type: none;
+    display:inline-block;
+    padding: 10px 20px;
+}
+
+nav ul li a{
+    text-decoration: none;
+    color:white;
+}
+
+nav ul li a:hover{
+    color: yellow;
+    transition: 3s;
+    cursor: pointer;
 }
