--- a/Portfolio/Styles.css
+++ b/Portfolio/Styles.css
@@ -13,9 +13,13 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-top: 20px;
+    padding-top: 10px;
     padding-left: 10%;
     padding-right: 10%;
+    padding-bottom: 10px;
+    color: white;
+    box-shadow: 0 2px 0 rgb(0 0 0 / 40%);
+  z-index: 10;
 }
 
 nav ul li{
