--- a/Portfolio/Styles.css
+++ b/Portfolio/Styles.css
@@ -1,6 +1,8 @@
 *{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
 }
 
 .navbar{
@@ -26,6 +28,7 @@ nav ul li{
     list-style-type: none;
     display:inline-block;
     padding: 10px 20px;
+    cursor: pointer;
 }
 
 nav ul li a{
@@ -33,8 +36,15 @@ nav ul li a{
     color:white;
 }
 
-nav ul li a:hover{
+nav ul li:hover{
     color: yellow;
-    transition: 3s;
-    cursor: pointer;
+    transition: .3s;
+    font-weight: bold;
+}
+
+#logo{
+  font-size: 28px;
+  letter-spacing: 1px;
+  cursor: pointer;
+  color: pink;
 }
