--- a/Portfolio/Styles.css
+++ b/Portfolio/Styles.css
@@ -5,6 +5,7 @@
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
 }
 
+/* Navigation*/
 .navbar{
     height: 10vh;
     width: 100%;
@@ -29,6 +30,7 @@ nav ul li{
     display:inline-block;
     padding: 10px 20px;
     cursor: pointer;
+    font-weight: bold;
 }
 
 nav ul li a{
@@ -39,12 +41,49 @@ nav ul li a{
 nav ul li:hover{
     color: yellow;
     transition: .3s;
-    font-weight: bold;
+    
 }
 
 #logo{
-  font-size: 28px;
+  font-size: 22px;
   letter-spacing: 1px;
   cursor: pointer;
-  color: pink;
+  color: yellow;
+}
+
+/*Video*/
+#background-video {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+  }
+
+  /*About Section*/
+  
+
+/*Media Queries: Mobile styles go first, without media queries. */
+
+@media only screen and (min-width: 321px) {
+    #background-video{ 
+        height: 70vh;
+    }
+    /* Larger mobile styles (wider than 320 pixels) */
+}
+
+@media only screen and (min-width: 600px) {
+    /* Tablet styles (wider than 600 pixels) */
+}
+
+@media only screen and (min-width: 1024px) {
+    /* Large laptop styles (wider than 1024 pixels) */
+}
+
+@media only screen and (min-width: 1140px) {
+    /* Desktop styles (wider than 1140 pixels) */
 }
