--- a/Portfolio/Styles.css
+++ b/Portfolio/Styles.css
@@ -104,13 +104,53 @@ nav ul li:hover{
 
  .small-img-row{
     display: flex;
+    background: white;
     margin: 20px 0;
     align-items: center;
     border-radius: 6px;
     overflow: hidden;
     width: 85%
  }
+.small-img{
+    position: relative;
+}
+ .small-img img{
+    width: 150px;
+ }
 
+ .small-img-row p{
+    margin-left: 20px;
+    color: #707070;
+    line-height: 22px;
+    font-size: 15px;
+ }
+
+ .play-btn{
+    width: 60px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    cursor: pointer;
+ }
+
+ .small-img .play-btn{
+    width: 35px;
+ }
+
+ .video-player{
+    width: 80%;
+    width: 60px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    cursor: pointer;
+ }
+
+video:focus{
+    outline: none;
+}
 /*Media Queries: Mobile styles go first, without media queries. */
 
 @media only screen and (min-width: 321px) {
