--- a/Portfolio/Styles.css
+++ b/Portfolio/Styles.css
@@ -68,9 +68,7 @@ nav ul li:hover{
     padding-bottom: 10px;
 }    
 
-
  /*Peojects section*/
-
 .container{
     width: 80%;
     margin: 80px auto;
@@ -146,13 +144,19 @@ nav ul li:hover{
     left: 50%;
     top: 50%;
     transform: translate(-50%,-50%);
-    display: none;
+   
  }  
  
 video:focus{
     outline: none;
 }
-
+ .close-btn{
+    position: absolute;
+    top: 10%;
+    right: 10px;
+    width: 35px;
+    cursor: pointer;
+ }
 
 
 
