--- a/Portfolio/Styles.css
+++ b/Portfolio/Styles.css
@@ -144,7 +144,7 @@ nav ul li:hover{
     left: 50%;
     top: 50%;
     transform: translate(-50%,-50%);
-   
+    display: none;
  }  
  
 video:focus{
