--- a/Portfolio_p2/style/styles.css
+++ b/Portfolio_p2/style/styles.css
@@ -1,152 +1,147 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
 }
 
 /*toggle between dark & light mode*/
-:root{
-    --color-primary: #191d2b;
-    --color-secondary: #27ae60;
-    --color-white: #FFFFFF;
-    --color-black: #000;
-    --color-grey0: #f8f8f8;
-    --color-grey-1: #dbe1e8;
-    --color-grey-2: #b2becd;
-    --color-grey-3: #6c7983;
-    --color-grey-4: #454e56;
-    --color-grey-5: #2a2e35;
-    --color-grey-6: #12181b;
-    --br-sm-2: 14px;
-    --box-shadow-1: 0 3px 15px rgb(0,0,0,.3);
+:root {
+  --color-primary: #191d2b;
+  --color-secondary: #27ae60;
+  --color-white: #FFFFFF;
+  --color-black: #000;
+  --color-grey0: #f8f8f8;
+  --color-grey-1: #dbe1e8;
+  --color-grey-2: #b2becd;
+  --color-grey-3: #6c7983;
+  --color-grey-4: #454e56;
+  --color-grey-5: #2a2e35;
+  --color-grey-6: #12181b;
+  --br-sm-2: 14px;
+  --box-shadow-1: 0 3px 15px rgb(0,0,0,.3);
 }
 
 body {
-    background-color: var(--color-primary);
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.1rem;
-    color: var(--color-white);
-    transition: all .4s ease-in-out;
+  background-color: var(--color-primary);
+  font-family: "Poppins", sans-serif;
+  font-size: 1.1rem;
+  color: var(--color-white);
+  transition: all 0.4s ease-in-out;
 }
 
 /*styling the sections*/
-
-a{
-    display: inline-block;
-    text-decoration: none;
-    color: inherit;     /*inherits body color*/
-    font-family: inherit;
+a {
+  display: inline-block;
+  text-decoration: none;
+  color: inherit; /*inherits body color*/
+  font-family: inherit;
 }
 
-header{
-    height: 100vh;
-    color: var(--color-white);
-    overflow: hidden;
-}
-section{
-    min-height: 100vh;
-    width: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    padding: 3rem 18rem;
-
+header {
+  height: 100vh;
+  color: var(--color-white);
+  overflow: hidden;
 }
 
-.section{
-    transform: translateY(-100%) scale(0);
-    transition: all .4s ease-in-out;  /* NB: you can create a variable for the transition effect*/
-    background-color: var(--color-primary);
+section {
+  min-height: 100vh;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  padding: 3rem 18rem;
+}
+
+.section {
+  transform: translateY(-100%) scale(0);
+  transition: all 0.4s ease-in-out; /* NB: you can create a variable for the transition effect*/
+  background-color: var(--color-primary);
 }
 
 /*styling each individual section
 NB: i can add different background colors
 */
-
-.sec1{
-    display: none;  /*no display because i want to switch to different sections*/
-    transform: translateY(0) scale(1);
+.sec1 {
+  display: none; /*no display because i want to switch to different sections*/
+  transform: translateY(0) scale(1);
 }
 
-.sec2{
-    display: none;
-    transform: translateY(0) scale(1);
-    background-color: slateblue;
+.sec2 {
+  display: none;
+  transform: translateY(0) scale(1);
+  background-color: slateblue;
 }
 
-.sec3{
-    display: none;  
-    transform: translateY(0) scale(1);
-    background-color: rgb(146,205,90);
+.sec3 {
+  display: none;
+  transform: translateY(0) scale(1);
+  background-color: rgb(146, 205, 90);
 }
 
-.sec4{
-    display: none;  
-    transform: translateY(0) scale(1);
-    background-color: slateblue;
+.sec4 {
+  display: none;
+  transform: translateY(0) scale(1);
+  background-color: slateblue;
 }
 
-.sec5{
-    display: none;  
-    transform: translateY(0) scale(1);
+.sec5 {
+  display: none;
+  transform: translateY(0) scale(1);
 }
 
-/*Active elements*/
-.active{
-    display: block; /*we only display the active elements*/
-    animation: scaleAnim 1s ease-in-out;
-    @keyframes scaleAnim {
-        0%{
-            transform: translateY(-100%) scale(0)
-        }
-        100%{
-            transform: translateY(-100%) scale(1)
-        }
-    }
+/*Animating the active button/sections*/
+/*we only display the active elements*/
+.active {
+  display: block;
+  animation: scaleAnim 1s ease-in-out;
+}
+@keyframes scaleAnim {
+  0% {
+    transform: translateY(-100%) scaleY(0);
+  }
+  100% {
+    transform: translateY(0) scaleY(1);
+  }
 }
 
-/*styling Controls*/
-/*parent container*/
-.controlls{
-    position: fixed;
-    z-index: 10;
-    top: 50%;
-    right: 3%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    transform: translateY(-50%); /*center in Y axis*/
-
-    /*Styling the active button*/
-    .active-btn{
-        background-color: var(--color-secondary) !important;
-        transition: all .4s ease-in-out;
-        i{
-           color: var(--color-white) !important; 
-        }   
-    }
-
-    .control{
-        padding: 1rem;
-        cursor: pointer;
-        background-color: var(--color-grey-4);
-        width: 55px;
-        height: 55px;
-        border-radius: 50%;
-        /*centering the icons*/
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: .7rem 0;  /*icon spacing*/
-        box-shadow:var(--box-shadow-1);
-
-        /*resizing the icons*/
-        i{
-            font-size: 1.2rem;
-            color: var(--color-grey-2);
-            pointer-events: none;
-        }
-    }
+/*styling Controls, parent container*/
+.controlls {
+  position: fixed;
+  z-index: 10;
+  top: 50%;
+  right: 3%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transform: translateY(-50%); /*center in Y axis*/
+  /*Styling the active button*/
 }
+.controlls .active-btn {
+  background-color: var(--color-secondary) !important;
+  transition: all 0.4s ease-in-out;
+}
+.controlls .active-btn i {
+  color: var(--color-white) !important;
+}
+.controlls .control {
+  padding: 1rem;
+  cursor: pointer;
+  background-color: var(--color-grey-4);
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  /*centering the icons*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0.7rem 0; /*icon spacing*/
+  box-shadow: var(--box-shadow-1);
+  /*resizing the icons*/
+}
+.controlls .control i {
+  font-size: 1.2rem;
+  color: var(--color-grey-2);
+  pointer-events: none;
+}/*# sourceMappingURL=styles.css.map */
