--- a/Portfolio_p2/style/styles.scss
+++ b/Portfolio_p2/style/styles.scss
@@ -149,3 +149,69 @@ NB: i can add different background colors
         }
     }
 }
+
+/*Header content styling*/
+.header-content{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    height: 100%;
+
+    /*left header section*/
+    .left-header{
+        display: flex;
+        align-items: center;
+        position: relative;
+        .h-shape{
+            transition: all .4s ease-in-out;
+            width: 65%;  /*80 seems to work best for smaller screens*/
+            height: 100%;
+            background-color: var(--color-secondary);
+            position: absolute;
+            left: 0;
+            top: 0;
+            z-index: -1;
+            clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%); /*picture shape*/;
+        }
+        .image{
+            border-radius: var(--br-sm-2);
+            height: 90%;
+            width: 65%;
+            margin-left: 4rem;
+            background-color: var(--color-black);
+            transition: all .4s ease-in-out; /*create a variable for this*/
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                transition: all .4s ease-in-out;
+                filter: grayscale(100%);
+                &:hover{
+                    filter: grayscale(0);
+                }
+            }
+        }
+    }
+    /*right header section*/
+    .right-header{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding-right: 18rem;
+        .name{
+            font-size: 3rem;
+            span{
+                color: var(--color-secondary);
+            }
+        }
+        p{
+            margin: 1.5rem 0;
+            line-height: 2rem;
+        }
+    }
+}
+
+/*Independent components*/
+
+.main-btn{
+    
+}
