--- a/Portfolio_p2/style/styles.css
+++ b/Portfolio_p2/style/styles.css
@@ -204,4 +204,44 @@ NB: i can add different background colors
   line-height: 2rem;
 }
 
-/*Independent components*//*# sourceMappingURL=styles.css.map */
+/*Independent components here*/
+/* the download button*/
+.btn-con {
+  display: flex;
+  align-self: flex-start;
+}
+
+/*Thee download button filled the entire section because 
+i used flex on the parent container. 
+solution is to style the parent containeer with class btn-con to: 
+display: flex;
+align-self: flex-start;
+*/
+.main-btn {
+  border-radius: 30px;
+  color: inherit;
+  font-weight: 600;
+  position: relative;
+  border: 1px solid var(--color-secondary);
+  display: flex;
+  align-self: flex-start;
+  align-items: center;
+  overflow: hidden;
+  /*sudo elements*/
+}
+.main-btn .btn-text {
+  padding: 0 2rem;
+}
+.main-btn .btn-icon {
+  background-color: var(--color-secondary);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  padding: 1rem;
+}
+.main-btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+}/*# sourceMappingURL=styles.css.map */
