--- a/Portfolio_p2/style/styles.scss
+++ b/Portfolio_p2/style/styles.scss
@@ -210,8 +210,45 @@ NB: i can add different background colors
     }
 }
 
-/*Independent components*/
+/*Independent components here*/
 
+/* the download button*/
+.btn-con{
+    display: flex;
+    align-self: flex-start;
+}
+/*Thee download button filled the entire section because 
+i used flex on the parent container. 
+solution is to style the parent containeer with class btn-con to: 
+display: flex;
+align-self: flex-start;
+*/
 .main-btn{
-    
+    border-radius: 30px;
+    color: inherit;
+    font-weight: 600;
+    position: relative;
+    border: 1px solid var(--color-secondary);
+    display: flex;
+    align-self: flex-start;
+    align-items: center;
+    overflow: hidden;
+    .btn-text{
+        padding: 0 2rem;
+    }
+    .btn-icon{
+        background-color: var(--color-secondary);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        padding: 1rem;
+
+    }
+    /*sudo elements*/
+    &::before{
+        content: '';
+        position: absolute;
+        top: 0;
+    }
 }
