--- a/Portfolio_p2/style/styles.css
+++ b/Portfolio_p2/style/styles.css
@@ -282,5 +282,5 @@ align-self: flex-start;
   z-index: -1;
   transform: translate(-50%, -50%);
   font-weight: 800;
-  font-size: 4.6rem;
+  font-size: 4.6rem; /*original is 6.3rem*/
 }/*# sourceMappingURL=styles.css.map */
