--- a/Portfolio_p2/style/styles.css
+++ b/Portfolio_p2/style/styles.css
@@ -210,6 +210,11 @@ NB: i can add different background colors
   padding-top: 3.5rem;
   padding-bottom: 5rem;
 }
+.about-container .right-about {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+}
 
 /*Independent components here*/
 /* the download button*/
