--- a/Portfolio_p2/style/styles.scss
+++ b/Portfolio_p2/style/styles.scss
@@ -210,7 +210,43 @@ NB: i can add different background colors
 
 
 /*The About section*/
+.about-container{
+     display: grid;
+     grid-template-columns: repeat(2, 1fr);
+     padding-top: 3.5rem;
+     padding-bottom: 5rem;
+     .right-about{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 2rem;
+        .about-item{
+            border: 1px solid var(--color-grey-5);
+            border-radius: 5px;
+            transition: all .4s ease-in-out;
+            box-shadow: 1px 2px 15px rgba(0,0,0,.1);
+            &:hover{
+                cursor: default;
+                transform: translateY(-5px);
+                border: 1px solid var(--color-secondary);
+                box-shadow: 1px 2px 15px rgba(0,0,0,.32);
+            }
+            .abt-text{
+                padding: 1.5rem;
+                display: flex;
+                flex-direction: colum;
+                .large-text{
+                    font-size: 3rem;
+                    font-weight: 700;
+                    color: var(--color-secondary);
+                }
+                .small-text{
+                    padding-left: 3rem;
+                }
+            }
+        }
+     }
 
+}
 
 
 /*Independent components here*/
