--- a/Portfolio_p2/style/styles.css
+++ b/Portfolio_p2/style/styles.css
@@ -239,6 +239,20 @@ NB: i can add different background colors
 }
 .about-container .right-about .about-item .abt-text .small-text {
   padding-left: 3rem;
+  position: relative;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  color: var(--color-grey-1);
+  letter-spacing: 2px;
+}
+.about-container .right-about .about-item .abt-text .small-text::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 15px;
+  width: 2rem;
+  height: 2px;
+  background-color: var(--color-grey-5);
 }
 
 /*Independent components here*/
