--- a/Portfolio_p2/style/styles.scss
+++ b/Portfolio_p2/style/styles.scss
@@ -241,6 +241,20 @@ NB: i can add different background colors
                 }
                 .small-text{
                     padding-left: 3rem;
+                    position: relative;
+                    text-transform: uppercase;
+                    font-size: 1.2rem;
+                    color: var(--color-grey-1);
+                    letter-spacing: 2px;
+                    &::before{
+                        content: '';
+                        position: absolute;
+                        left: 0;
+                        top: 15px;
+                        width: 2rem;
+                        height: 2px;
+                        background-color: var(--color-grey-5);
+                    }
                 }
             }
         }
