--- a/Portfolio_p2/style/styles.css
+++ b/Portfolio_p2/style/styles.css
@@ -225,12 +225,12 @@ NB: i can add different background colors
   cursor: default;
   transform: translateY(-5px);
   border: 1px solid var(--color-secondary);
-  box-shadow: 1px 2px 15px rgba(0, 0, 0, 0.32);
+  box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.32);
 }
 .about-container .right-about .about-item .abt-text {
   padding: 1.5rem;
   display: flex;
-  flex-direction: colum;
+  flex-direction: column;
 }
 .about-container .right-about .about-item .abt-text .large-text {
   font-size: 3rem;
@@ -253,6 +253,18 @@ NB: i can add different background colors
   width: 2rem;
   height: 2px;
   background-color: var(--color-grey-5);
+}
+.about-container .left-about {
+  /*padding-right: 5rem;*/
+}
+.about-container .left-about p {
+  line-height: 2rem;
+  padding: 1rem;
+  color: var(--color-grey-1);
+}
+.about-container .left-about h4 {
+  font-size: 2rem;
+  text-transform: uppercase;
 }
 
 /*Independent components here*/
